--- a/index.html
+++ b/index.html
@@ -4,11 +4,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Title</title>
+    <title>Colton's Resume</title>
     <link rel="stylesheet" href="screen.css">
   </head>
   <body>
-    <h1>Heading</h1>
-    <script src="index.js"></script>
-  </body>
+    <div class="container">
+      <header>
+          <h1>Emi's Resume</h1>
+          <p>Web Developer</p>
+      </header>
+
+      <section id="about">
+          <h2>About Me</h2>
+          <p>Insert your introduction or summary here.</p>
+      </section>
+
+      <section id="experience">
+          <h2>Experience</h2>
+          <ul>
+              <li>
+                  <h3>Job Title</h3>
+                  <p>Company Name - Date Range</p>
+                  <p>Description of responsibilities and achievements.</p>
+              </li>
+              <!-- Add more experience items as needed -->
+          </ul>
+      </section>
+
+      <section id="education">
+          <h2>Education</h2>
+          <ul>
+              <li>
+                  <h3>Degree</h3>
+                  <p>University Name - Date Range</p>
+                  <p>Description of degree program and achievements.</p>
+              </li>
+              <!-- Add more education items as needed -->
+          </ul>
+      </section>
+
+      <section id="skills">
+          <h2>Skills</h2>
+          <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JavaScript</li>
+              <!-- Add more skills as needed -->
+          </ul>
+      </section>
+
+      <footer>
+          <p>Contact: your.email@example.com | Phone: +1234567890</p>
+      </footer>
+  </div>
+</body>
 </html>
