--- a/index.html
+++ b/index.html
@@ -10,22 +10,34 @@
   <body>
     <div class="container">
       <header>
-          <h1>Emi's Resume</h1>
-          <p>Web Developer</p>
+          <h1>Colton's Resume</h1>
+          <p>Web Developer and data analyst</p>
       </header>
 
       <section id="about">
           <h2>About Me</h2>
-          <p>Insert your introduction or summary here.</p>
+          <p>My name is Colton Hyer, I am 21 years old and I am
+            currently pursuing a degree in information science. My hobbies
+            include skiing, cooking, and playing soccer.
+          </p>
       </section>
 
       <section id="experience">
           <h2>Experience</h2>
           <ul>
               <li>
-                  <h3>Job Title</h3>
-                  <p>Company Name - Date Range</p>
-                  <p>Description of responsibilities and achievements.</p>
+                  <h3>Dog park attendant</h3>
+                  <p>The Bark Park - 5/23 - 8/23</p>
+                  <p>Oversaw daily operations which included using microsoft
+                    excel to track and log customer transactions
+                  </p>
+              </li>
+              <li>
+                <h3>Crew member</h3>
+                <p>Kazoopy's Pizza - 12/20 - 6/21</p>
+                <p>Food prep and clean up, in addition to 
+                  helping fix broken appliances around the store
+                </p>
               </li>
               <!-- Add more experience items as needed -->
           </ul>
@@ -35,9 +47,13 @@
           <h2>Education</h2>
           <ul>
               <li>
-                  <h3>Degree</h3>
-                  <p>University Name - Date Range</p>
-                  <p>Description of degree program and achievements.</p>
+                  <h3>Information Science</h3>
+                  <p>Michigan State University- 9/21 - 12/24</p>
+                  <p>Proficient in organizing, managing, and analyzing data across various platforms and systems.
+                    Skilled in information retrieval methods and designing intuitive user interfaces.
+                    Knowledgeable in information policy, ethics, and data visualization techniques.
+                    Experienced in utilizing technologies such as databases, programming languages, and data analysis tools.
+                    Equipped with expertise to support decision-making processes and facilitate effective information management in diverse fields</p>
               </li>
               <!-- Add more education items as needed -->
           </ul>
@@ -49,12 +65,13 @@
               <li>HTML</li>
               <li>CSS</li>
               <li>JavaScript</li>
+              <li>Tableau</li>
               <!-- Add more skills as needed -->
           </ul>
       </section>
 
       <footer>
-          <p>Contact: your.email@example.com | Phone: +1234567890</p>
+          <p>Contact: Coltonhyer02.com | Phone: 289-823-2515</p>
       </footer>
   </div>
 </body>
