--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <header>
           <h1>Colton's Resume</h1>
-          <p>Web Developer and data analyst</p>
+          <h2>Web Developer and data analyst<h2>
       </header>
 
       <section id="about">
