--- a/index.html
+++ b/index.html
@@ -49,15 +49,17 @@
               <li>
                   <h3>Information Science</h3>
                   <p>Michigan State University- 9/21 - 12/24</p>
-                  <p>Proficient in organizing, managing, and analyzing data across various platforms and systems.
-                    Skilled in information retrieval methods and designing intuitive user interfaces.
-                    Knowledgeable in information policy, ethics, and data visualization techniques.
-                    Experienced in utilizing technologies such as databases, programming languages, and data analysis tools.
-                    Equipped with expertise to support decision-making processes and facilitate effective information management in diverse fields</p>
-              </li>
-              <!-- Add more education items as needed -->
-          </ul>
-      </section>
+                  <ul>
+                    <li>Proficient in organizing, managing, and analyzing data across various platforms and systems.</li>
+                    <li>Skilled in information retrieval methods and designing intuitive user interfaces.</li>
+                    <li>Knowledgeable in information policy, ethics, and data visualization techniques.</li>
+                    <li>Experienced in utilizing technologies such as databases, programming languages, and data analysis tools.</li>
+                    <li>Equipped with expertise to support decision-making processes and facilitate effective information management in diverse fields.</li>
+                </ul>
+            </li>
+            <!-- Add more education items as needed -->
+        </ul>
+    </section>
 
       <section id="skills">
           <h2>Skills</h2>
