--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
       </section>
 
       <section id="education">
-          <h2>Education</h2>
-          <ul>
-              <li>
-                  <h3>Information Science</h3>
-                  <p>Michigan State University- 9/21 - 12/24</p>
-                  <ul>
+        <h2>Education</h2>
+        <ul class="education-list">
+            <li>
+                <h3>Information Science</h3>
+                <p>Michigan State University - 9/21 - 12/24</p>
+                <ul class="bullet-points">
                     <li>Proficient in organizing, managing, and analyzing data across various platforms and systems.</li>
                     <li>Skilled in information retrieval methods and designing intuitive user interfaces.</li>
                     <li>Knowledgeable in information policy, ethics, and data visualization techniques.</li>
